add Vercel Speed Insights script

--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
         <section id="contact">
             <h2>Contacto</h2>
         </section>
+
+        <script>
+            window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+        </script>
+        <script defer src="/_vercel/speed-insights/script.js"></script>
 </body>
 
 </html>
